[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/Ground.gd" type="Script" id=1]
[ext_resource path="res://game/EffectZone.tscn" type="PackedScene" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 20, 1, 40 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 40, 2, 80 )

[node name="Ground" type="StaticBody"]
collision_layer = 4
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="Spatial" type="Spatial" parent="."]

[node name="LeftEffect" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 6, 0 )

[node name="RightEffect" parent="Spatial" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 6, 0 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -20, -1, -40, 40, 12, 80 )

[connection signal="effect_zone_entered" from="Spatial/LeftEffect" to="." method="_on_effect_zone_entered"]
[connection signal="effect_zone_entered" from="Spatial/RightEffect" to="." method="_on_effect_zone_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
